--- a/example/base.html
+++ b/example/base.html
@@ -41,9 +41,10 @@
           containerW: 1200      // @fix 这个必须指定
         },
         nodes: [
-          {id: '1', x: 0, y: 0, w: 3, h: 2, minW: 2, minH: 2},
-          {id: '2', x: 3, y: 0, w: 3, h: 2, minW: 2, minH: 2},
-          {id: '3', x: 6, y: 2, w: 2, h: 2, minW: 2, minH: 2}
+          // {id: '1', x: 0, y: 0, w: 3, h: 2, minW: 2, minH: 2},
+          // {id: '2', x: 3, y: 0, w: 3, h: 2, minW: 2, minH: 2},
+          {id: '3', x: 0, y: 0, w: 3, h: 2, minW: 2, minH: 2},
+          {id: '4', x: 0, y: 4, w: 3, h: 3, minW: 2, minH: 2}
         ],
         widget: [
           "我是小部件1",
